<resources>
    <string name="app_name">MyExampleApp</string>
    <string name="editText">Сюда надо вводить текст</string>
    <string name="textView">Это обычный текст</string>
    <string name="button">Вперед, на новую активность</string>
    <string name="check_1">check 1</string>
    <string name="check_2">check 2</string>
    <string name="check_3">check 3</string>
    <string name="check_4">check 4</string>
    <string name="textString">Сюда вводиться любой текст</string>
    <string name="backButton">Назад</string>
    <string name="dataString">Дата</string>
    <string name="emailString">Адрес почты</string>
    <string name="passwordString">Вводиться пароль, он скрытый</string>
    <string name="numberString">Сюда вводятся только цифры</string>
    <string name="phoneNumberString">Сюда вводиться номер телефона</string>
</resources>